# hatch-cython

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COVERAGE.md  README.md  cliff.toml  mise.toml  pyproject.toml  taskfile.yaml
.github/workflows/: auto-pr.yaml  build.yaml  changelog.yaml  coverage.yaml  ruff.yaml  test.yaml  test.yml
example/: bootstrap.py  hatch.toml  pyproject.toml
example/src/example/: test.pyi  test.pyx
example/src/example/mod_a/: adds.pyi
example/src/example_lib/: __about__.py  _alias.pyx  templated.pyi.in  templated.pyx.in  templated_maxosx_sample.pyi  test.pyi  test.pyx
example/src/example_lib/mod_a/: adds.pyx  some_defn.pxd  some_defn.py
example/src/example_lib/mod_a/deep_nest/: creates.pyx
example/src/example_lib/platform/: darwin.pyx  freebsd.pyx  linux.pyx
example/tests/: test_aliased.py  test_example.py  test_submodule.py  test_templated.py
src/hatch_cython/: __about__.py  __init__.py  __main__.py  config.py  constants.py  devel.py  hooks.py  plugin.py  temp.py  types.py  utils.py
src/hatch_cython/config/: __init__.py  autoimport.py  config.py  defaults.py  files.py  flags.py  includes.py  macros.py  platform.py  sdist.py  templates.py
src/hatch_cythonize/: __about__.py  __init__.py  constants.py  devel.py  hooks.py  plugin.py  temp.py  utils.py
src/hatch_cythonize/config/: __init__.py  autoimport.py  config.py  defaults.py  files.py  flags.py  includes.py  macros.py  platform.py  templates.py
test_libraries/: bootstrap.py
test_libraries/only_included/: LICENSE.txt  hatch.toml  pyproject.toml
test_libraries/only_included/src/example_only_included/: __about__.py  __init__.py  compile.py  did.pyi  dont_compile.py
test_libraries/only_included/tests/: __init__.py  test_compiled.py  test_didnt.py
test_libraries/simple_structure/: .gitignore  LICENSE.txt  hatch.toml  pyproject.toml
test_libraries/src_structure/: .gitignore  LICENSE.txt  README.md  bootstrap.py  hatch.toml  partial_test.py  pyproject.toml
test_libraries/src_structure/include/: something.cc  something.h
test_libraries/src_structure/scripts/: custom_include.py
test_libraries/src_structure/src/example_lib/: _alias.pyx  custom_includes.pyi  custom_includes.pyx  normal.py  templated_maxosx_sample.pyi  templated_maxosx_sample.pyx  test.pyx
test_libraries/src_structure/src/example_lib/mod_a/: some_defn.py
test_libraries/src_structure/src/example_lib/no_compile/: abc.py
test_libraries/src_structure/src/example_lib/platform/: windows.pyx
test_libraries/src_structure/tests/: __init__.py  test_custom_includes.py  test_example.py  test_normal.py  test_platform.py  test_templated.py
tests/: __init__.py  test_config.py  test_env_merges.py  test_files.py  test_includes.py  test_macros.py  test_platform.py  test_platform_pyversion.py  test_plugin.py  test_plugin_excludes.py  test_setuppy.py  test_templates.py  test_utils.py  test_xenv_merge.py  utils.py
