[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-cython"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "joshua-auchincloss", email = "joshua.auchincloss@proton.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "Cython",
  "hatch",
  "hatchling",
  "setuptools",
  "typing_extensions; python_version < '3.10'"
]

[project.optional-dependencies]
test = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "toml",
  "numpy"
]

[project.entry-points.hatch]
cython = "hatch_cython.hooks"

[project.urls]
Documentation = "https://github.com/joshua-auchincloss/hatch-cython#readme"
Issues = "https://github.com/joshua-auchincloss/hatch-cython/issues"
Source = "https://github.com/joshua-auchincloss/hatch-cython"

[tool.hatch.version]
path = "src/hatch_cython/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "toml",
  "numpy"
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest -vv {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report --format=markdown > COVERAGE.md",
  "coverage html",
  "coverage report"
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black",
  "mypy",
  "ruff",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/hatch_cython tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py310"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "B027",
  "FBT001",
  "FBT003",
  "S105", "S106", "S107",
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
]

[tool.ruff.isort]
known-first-party = ["hatch_cython"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
"**/__init__.py" = ["F401"]

[tool.coverage.run]
source_pkgs = ["hatch_cython"]
branch = true
parallel = true
omit = [
  "src/hatch_cython/__about__.py",
]

[tool.coverage.paths]
hatch_cython = ["src/hatch_cython", "*/hatch-cython/src/hatch_cython"]
tests = ["tests", "*/hatch-cython/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
